<resources>
    <string name="app_name">AaronGoldbinCapstone</string>
    <!-- Strings used throughout app -->
    <string name="hintRequired">Required</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>

    <!-- Main Activity strings -->
    <string name="act_workout">Workouts</string>


    <!-- Workout Activity strings -->
    <string name="act_exercise">Exercises</string>
    <string name="no_workouts_entered">No Workouts</string>
    <string name="workout_name">Workout Name</string>


    <!-- Exercise Activity strings -->
    <string name="exercise_name">Exercise</string>
    <string name="sets">Sets</string>
    <string name="rep">Reps</string>
    <string name="weight">Weight</string>
    <string name="switch_reps">All sets same # rep?</string>
    <string name="switch_weight">All sets same weight?</string>
    <string name="add_set">Add Set </string>
    <string name="lbl_exercises">Exercises</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_exercises_entered">No exercises</string>
    <string name="delete_exercise">Delete Exercise</string>
</resources>
