<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ExerciseActivity">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Exercise Frag" />

    <TextView
        android:id="@+id/lblExerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/lbl_exercise" />        <!--app:layout_constraintBottom_toBottomOf="@+id/inputExerciseName"-->
    <!--app:layout_constraintEnd_toStartOf="@+id/inputExerciseName"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="@+id/inputExerciseName" />-->

    <TextView
        android:id="@+id/lblExerciseSets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/sets"
        android:visibility="invisible"
        />        <!--app:layout_constraintBottom_toBottomOf="@+id/inputExerciseSets"-->
    <!--app:layout_constraintTop_toTopOf="@+id/inputExerciseSets"-->
    <!--app:layout_constraintEnd_toEndOf="@+id/lblExerciseName"-->
    <!--tools:layout_editor_absoluteX="24dp" />-->

    <EditText
        android:id="@+id/inputExerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"
        android:layout_marginTop="52dp"
        android:ems="10"
        android:hint="@string/hintRequired"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputExerciseSets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:ems="10"
        android:hint="@string/hintRequired"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@id/inputExerciseName"
        app:layout_constraintTop_toBottomOf="@+id/inputExerciseName" />

    <Button
        android:id="@+id/btnCancelExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginTop="48dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputExerciseSets" />

    <Switch
        android:id="@+id/switchReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:checked="true"
        android:text="@string/switch_reps"
        app:layout_constraintStart_toStartOf="@+id/inputExerciseName"
        app:layout_constraintTop_toBottomOf="@+id/inputExerciseName" />

    <Switch
        android:id="@+id/switchWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:checked="true"
        android:text="@string/switch_weight"
        app:layout_constraintStart_toStartOf="@+id/inputExerciseName"
        app:layout_constraintTop_toBottomOf="@+id/switchReps" />

    <Button
        android:id="@+id/btnAddExercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button" />
</FrameLayout>