<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".persistence.ui.SetFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Set Frag" />

    <TextView
        android:id="@+id/lblExerciseReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        android:text="@string/rep"
        app:layout_constraintBottom_toBottomOf="@+id/inputExerciseName"
        app:layout_constraintEnd_toStartOf="@+id/inputExerciseName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inputExerciseName" />

    <TextView
        android:id="@+id/lblExerciseWeights"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/weight"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/inputExerciseSets"
        app:layout_constraintTop_toTopOf="@+id/inputExerciseSets"
        app:layout_constraintEnd_toEndOf="@+id/lblExerciseReps"
        tools:layout_editor_absoluteX="24dp" />

    <EditText
        android:id="@+id/inputExerciseReps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="number"
        android:visibility="gone"
        android:hint=""
        app:layout_constraintTop_toBottomOf="@+id/inputExerciseSets"
        app:layout_constraintStart_toStartOf="@id/inputExerciseName"
        tools:layout_editor_absoluteX="113dp" />

    <EditText
        android:id="@+id/inputExerciseWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:visibility="gone"
        android:hint=""
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@id/inputExerciseName"
        app:layout_constraintTop_toBottomOf="@+id/inputExerciseReps" />

    <Button
        android:id="@+id/btnAddSet"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="48dp"
        android:text="@string/add"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputExerciseSets" />

    <Button
        android:id="@+id/btnCancelSet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginTop="48dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputExerciseSets" />

</FrameLayout>